fixed hebi logo from spilling over card

--- a/styles.css
+++ b/styles.css
@@ -245,27 +245,16 @@ footer p {
 }
 
 .video-container {
-    position: relative;
-    width: 60%;
-    /*max-width: 1000px;
-    /* Set a max-width to limit the size */
-    padding-bottom: 56.25%;
-    /* Aspect ratio: 16:9 */
-    margin: 0 auto;
-    /* Centers the container horizontally */
-    height: 0;
-    overflow: hidden;
-    margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    align-items: center;
 }
 
 .video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     border-radius: 8px;
-    /* Optional: adds rounded corners */
+    object-fit: cover;
 }
 
 
